Added the final sections and the styles

--- a/index.html
+++ b/index.html
@@ -1,181 +1,340 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/Normalize/Normalize.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <header class="headerContainer">
-        <nav class="navbarContainer">
-          <div class="logo is-one">
-            <a href="#">Smashing Magazine</a>
-          </div>
-          <ul class="is-five">
-            <li>Articles</li>
-            <li>Books</li>
-            <li>Events</li>
-            <li>Jobs</li>
-            <li>Membership</li>
-          </ul>
-          <div class="searcher is-one">
-            <button>
-              Topics
-            </button>
-          </div>
-        </nav>
-      </header>
-      <main>
-        <div class="main-articles">
-          <div class="recent-post">
-            <section class="is-two">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-              <article>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-two">
-              <article>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-          </div>
-          <div class="latest-posts">
-            <section class="is-one">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-          </div>
-          <div class="is-largest-half clear">
-            <section class="is-one">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-          </div>
-          <div class="is-largest-half-invert clear">
-            <section class="is-one">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article class="is-grey-light">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-          </div>
-          <div class="is-largest-block">
-            <section class="is-one">
-              <article class="medium-height">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-          </div>
-          <div class="is-largest-block">
-            <section class="is-one">
-              <article class="is-remarkable max-height">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/Normalize/Normalize.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container">
+    <header class="headerContainer">
+      <nav class="navbarContainer">
+        <div class="logo is-one">
+          <a href="#">Smashing Magazine</a>
         </div>
-      </main>
-    </div>
-  </body>
+        <ul class="is-five">
+          <li>Articles</li>
+          <li>Books</li>
+          <li>Events</li>
+          <li>Jobs</li>
+          <li>Membership</li>
+        </ul>
+        <div class="searcher is-one">
+          <button>
+            Topics
+          </button>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="main-articles">
+        <div class="recent-post">
+          <section class="is-two">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-two">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="latest-posts">
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-half clear">
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-half-invert clear">
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block">
+          <section class="is-one">
+            <article class="small-height">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block">
+          <section class="is-one">
+            <article class="is-remarkable max-height">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block">
+          <section class="is-one">
+            <article class="medium-height">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="recent-post">
+          <section class="is-two">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-two">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="card-post">
+          <section class="is-two is-row">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block">
+          <section class="is-one">
+            <article class="small-height">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block">
+          <section class="is-one">
+            <article class="medium-height">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="guides-posts">
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+          <section class="is-one">
+            <article class="is-grey-light">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block clear">
+          <section class="is-one">
+            <article class="is-remarkable max-height">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                distinctio sed?
+              </p>
+            </article>
+          </section>
+        </div>
+        <div class="is-largest-block">
+          <section class="is-one">
+            <article class="medium-height">
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+            </article>
+          </section>
+        </div>
+
+      </div>
+    </main>
+  </div>
+</body>
+
 </html>
