Finished the heat map and the styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300i,400,400i,500,500i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/Normalize/Normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
@@ -194,8 +195,8 @@
           </div>
           <div class="is-largest-block">
             <section class="is-one">
-              <article class="medium-height">
-                <h2>Recent Articles</h2>
+              <article class="medium-height is-grey-medium">
+                <h2>Person Of The Week</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -207,7 +208,7 @@
           <div class="recent-post">
             <section class="is-two">
               <article class="is-grey-light">
-                <h2>Recent Articles</h2>
+                <h2>How To GraphQL</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -215,8 +216,8 @@
                 </p>
               </article>
 
-              <article class="">
-                <h2>Recent Articles</h2>
+              <article class="is-grey-light">
+                <h2>Accessibility Audit With Developer Tools</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -225,8 +226,8 @@
               </article>
             </section>
             <section class="is-two">
-              <article class="">
-                <h2>Recent Articles</h2>
+              <article class="is-grey-light">
+                <h2>Investigating Animation Performance</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -234,7 +235,7 @@
                 </p>
               </article>
               <article class="is-grey-light">
-                <h2>Recent Articles</h2>
+                <h2>Falco</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -245,8 +246,8 @@
           </div>
           <div class="card-post">
             <section class="is-two is-row">
-              <article class="">
-                <h2>Recent Articles</h2>
+              <article class="is-grey-light">
+                <h2>Introducing Sass Modules</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -254,7 +255,7 @@
                 </p>
               </article>
               <article class="is-grey-light">
-                <h2>Recent Articles</h2>
+                <h2>Design System Playground</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -265,8 +266,8 @@
           </div>
           <div class="is-largest-block">
             <section class="is-one">
-              <article class="small-height">
-                <h2>Recent Articles</h2>
+              <article class="small-height is-white">
+                <h2>More links on Twitter</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -278,7 +279,7 @@
           <div class="is-largest-block">
             <section class="is-one">
               <article class="medium-height">
-                <h2>Recent Articles</h2>
+                <h2>Design Systems</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -290,17 +291,7 @@
           <div class="guides-posts">
             <section class="is-one">
               <article class="is-grey-light">
-                <h2>Recent Articles</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
-                  distinctio sed?
-                </p>
-              </article>
-            </section>
-            <section class="is-one">
-              <article class="">
-                <h2>Recent Articles</h2>
+                <h2>New Front-End Challenges To Master</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -310,7 +301,7 @@
             </section>
             <section class="is-one">
               <article class="is-grey-light">
-                <h2>Recent Articles</h2>
+                <h2>Performance Optimization & Strategy</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -320,7 +311,17 @@
             </section>
             <section class="is-one">
               <article class="is-grey-light">
-                <h2>Recent Articles</h2>
+                <h2>Design Patterns & Checklists</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                  distinctio sed?
+                </p>
+              </article>
+            </section>
+            <section class="is-one">
+              <article class="is-grey-light">
+                <h2>Improving Workflow & Data Protection</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -332,7 +333,7 @@
           <div class="is-largest-block clear">
             <section class="is-one">
               <article class="is-remarkable max-height">
-                <h2>Recent Articles</h2>
+                <h2 class="big">Smashing Newsletter</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
                   omnis recusandae ea minus nostrum, ad in ullam ut corporis et
@@ -343,39 +344,51 @@
           </div>
           <div class="is-largest-block">
             <section class="is-one">
-              <article class="medium-height">
+              <article class="small-height is-white">
+                <h2>More links on Twitter</h2>
                 <p>
-                  <a href="#">
-                    Lorem ipsum dolor sit amet.
-                  </a>
-                </p>
-                <p>
-                  <a href="#">
-                    Lorem ipsum dolor sit amet.
-                  </a>
-                </p>
-                <p>
-                  <a href="#">
-                    Lorem ipsum dolor sit amet.
-                  </a>
-                </p>
-                <p>
-                  <a href="#">
-                    Lorem ipsum dolor sit amet.
-                  </a>
-                </p>
-                <p>
-                  <a href="#">
-                    Lorem ipsum dolor sit amet.
-                  </a>
-                </p>
-                <p>
-                  <a href="#">
-                    Lorem ipsum dolor sit amet.
-                  </a>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                  omnis recusandae ea minus nostrum, ad in ullam ut corporis et
+                  distinctio sed?
                 </p>
               </article>
             </section>
+          </div>
+          <div class="is-largest-block">
+            <footer class="is-one">
+              <div class="medium-height">
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet.
+                  </a>
+                </p>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet.
+                  </a>
+                </p>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet.
+                  </a>
+                </p>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet.
+                  </a>
+                </p>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet.
+                  </a>
+                </p>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet.
+                  </a>
+                </p>
+              </div>
+            </footer>
           </div>
         </div>
       </main>
